--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,20 @@
 {
-  "version": 2,
-  "builds": [
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "public": true,
+  "headers": [
     {
-      "src": "public/**",
-      "use": "@vercel/static"
+      "source": "/downloads/(.*)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/vnd.android.package-archive"
+        },
+        {
+          "key": "Content-Disposition",
+          "value": "attachment; filename=tm-contractor-tracker.apk"
+        }
+      ]
     }
-  ],
-  "routes": [
-    {
-      "src": "/downloads/(.*)",
-      "headers": {
-        "Content-Type": "application/vnd.android.package-archive",
-        "Content-Disposition": "attachment; filename=tm-contractor-tracker.apk"
-      },
-      "dest": "/downloads/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
-  "outputDirectory": "public"
+  ]
 }
